--- a/package.json
+++ b/package.json
@@ -6,12 +6,18 @@
   "type": "module",
   "scripts": {
     "dev": "vite --host",
-    "build": "vite build"
+    "build": "vite build",
+    "preview": "vite preview --host"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "vite": "^5.4.8"
+    "vite": "^5.4.8",
+    "vite-plugin-pwa": "^0.20.5"
+  },
+  "dependencies": {
+    "colorjs.io": "^0.5.2",
+    "hammerjs": "^2.0.8"
   }
 }
